--- a/src/app/private/pages/cambiar-password/cambiar-password.page.html
+++ b/src/app/private/pages/cambiar-password/cambiar-password.page.html
@@ -11,7 +11,7 @@
             <ion-row>
 
                 <ion-card-content class="contenido">
-                    <ion-img class="foto-perfil" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Spider-Man.jpg/1200px-Spider-Man.jpg"></ion-img>
+                    <img class="foto-perfil" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Spider-Man.jpg/1200px-Spider-Man.jpg" />
                     <ion-label class="correo">correo@example.com</ion-label>
                 </ion-card-content>
             </ion-row>
@@ -25,64 +25,54 @@
                                 <ion-input type="password" formControlName="passwordactual"></ion-input>
 
                             </ion-item>
-                            <div
-                                *ngIf="FormCambioPass.get('passwordactual')?.invalid && FormCambioPass.get('passwordactual')?.touched">
-                                <span *ngIf="FormCambioPass.get('passwordactual')?.hasError('required')"
-                                 style="color: red;"> Campo requerido.</span>
-                                </div>
-                                 <!-- Validación en caso que el usuario ingrese menor de 5 caracteres -->
-                              <div  *ngIf="FormCambioPass.get('passwordactual')?.hasError('minlength')" style="color: red;">
+                            <div *ngIf="FormCambioPass.get('passwordactual')?.invalid && FormCambioPass.get('passwordactual')?.touched">
+                                <span *ngIf="FormCambioPass.get('passwordactual')?.hasError('required')" style="color: red;"> Campo requerido.</span>
+                            </div>
+                            <!-- Validación en caso que el usuario ingrese menor de 5 caracteres -->
+                            <div *ngIf="FormCambioPass.get('passwordactual')?.hasError('minlength')" style="color: red;">
                                 Nesecitas 5 Caracteres como Mínimo.
-                                </div>
-                                <!-- Validación en caso que el usuario ingreso mayor a 10 de caracteres -->
-                                <div
-                                *ngIf="FormCambioPass.get('passwordactual')?.hasError('maxlength')" style="color: red;">
+                            </div>
+                            <!-- Validación en caso que el usuario ingreso mayor a 10 de caracteres -->
+                            <div *ngIf="FormCambioPass.get('passwordactual')?.hasError('maxlength')" style="color: red;">
                                 10 Caracteres como Máximo.
-                                </div>
+                            </div>
 
 
                             <ion-item>
                                 <ion-label position="stacked">Password nueva</ion-label>
                                 <ion-input type="password" formControlName="passwordnueva"></ion-input>
                             </ion-item>
-                            <div
-                                *ngIf="FormCambioPass.get('passwordnueva')?.invalid && FormCambioPass.get('passwordnueva')?.touched">
-                                <span *ngIf="FormCambioPass.get('passwordnueva')?.hasError('required')"
-                                 style="color: red;"> Campo requerido.</span>
-                                </div>
+                            <div *ngIf="FormCambioPass.get('passwordnueva')?.invalid && FormCambioPass.get('passwordnueva')?.touched">
+                                <span *ngIf="FormCambioPass.get('passwordnueva')?.hasError('required')" style="color: red;"> Campo requerido.</span>
+                            </div>
 
-                                 <!-- Validación en caso que el usuario ingrese menor de 5 caracteres -->
-                              <div  *ngIf="FormCambioPass.get('passwordnueva')?.hasError('minlength')" style="color: red;">
+                            <!-- Validación en caso que el usuario ingrese menor de 5 caracteres -->
+                            <div *ngIf="FormCambioPass.get('passwordnueva')?.hasError('minlength')" style="color: red;">
                                 Nesecitas 5 Caracteres como Mínimo.
-                                </div>
-                                <!-- Validación en caso que el usuario ingreso mayor a 10 de caracteres -->
-                                <div
-                                *ngIf="FormCambioPass.get('passwordnueva')?.hasError('maxlength')" style="color: red;">
+                            </div>
+                            <!-- Validación en caso que el usuario ingreso mayor a 10 de caracteres -->
+                            <div *ngIf="FormCambioPass.get('passwordnueva')?.hasError('maxlength')" style="color: red;">
                                 10 Caracteres como Máximo.
-                                </div>
+                            </div>
 
                             <ion-item>
                                 <ion-label position="stacked">Confirmar Password</ion-label>
-                                <ion-input type="password"  formControlName="confirmarpassword"></ion-input>
+                                <ion-input type="password" formControlName="confirmarpassword"></ion-input>
                             </ion-item>
-                            <div
-                            *ngIf="FormCambioPass.get('confirmarpassword')?.invalid && FormCambioPass.get('confirmarpassword')?.touched">
-                            <span *ngIf="FormCambioPass.get('confirmarpassword')?.hasError('required')"
-                             style="color: red;"> Campo requerido.</span>
+                            <div *ngIf="FormCambioPass.get('confirmarpassword')?.invalid && FormCambioPass.get('confirmarpassword')?.touched">
+                                <span *ngIf="FormCambioPass.get('confirmarpassword')?.hasError('required')" style="color: red;"> Campo requerido.</span>
                             </div>
                             <div *ngIf="FormCambioPass.get('confirmarpassword')?.touched && FormCambioPass.get('passwordnueva')?.touched">
-                            <span *ngIf="FormCambioPass.get('confirmarpassword')?.value != FormCambioPass.get('passwordnueva')?.value"
-                             style="color: red;"> Contraseña deben de coincidir.</span>
+                                <span *ngIf="FormCambioPass.get('confirmarpassword')?.value != FormCambioPass.get('passwordnueva')?.value" style="color: red;"> Contraseña deben de coincidir.</span>
                             </div>
-                                <!-- Validación en caso que el usuario ingrese menor de 5 caracteres -->
-                                <div  *ngIf="FormCambioPass.get('confirmarpassword')?.hasError('minlength')" style="color: red;">
-                                  Nesecitas 5 Caracteres como Mínimo.
-                                  </div>
-                                  <!-- Validación en caso que el usuario ingreso mayor a 10 de caracteres -->
-                                  <div
-                                  *ngIf="FormCambioPass.get('confirmarpassword')?.hasError('maxlength')" style="color: red;">
-                                  10 Caracteres como Máximo.
-                                  </div>
+                            <!-- Validación en caso que el usuario ingrese menor de 5 caracteres -->
+                            <div *ngIf="FormCambioPass.get('confirmarpassword')?.hasError('minlength')" style="color: red;">
+                                Nesecitas 5 Caracteres como Mínimo.
+                            </div>
+                            <!-- Validación en caso que el usuario ingreso mayor a 10 de caracteres -->
+                            <div *ngIf="FormCambioPass.get('confirmarpassword')?.hasError('maxlength')" style="color: red;">
+                                10 Caracteres como Máximo.
+                            </div>
 
 
 
