Se realizo validaciones

--- a/src/app/private/pages/antedecentes-medicos-crear/antedecentes-medicos-crear.page.html
+++ b/src/app/private/pages/antedecentes-medicos-crear/antedecentes-medicos-crear.page.html
@@ -14,7 +14,7 @@
 
     <ion-list>
 
-        <form [formGroup]="FormularioAntecedentes" (ngSubmit)="CreateAntecedentes(FormularioAntecedentes.value)">
+        <form [formGroup]="FormularioAntecedentes" (submit)="CreateAntecedentes(FormularioAntecedentes.value)">
 
             <!-- Input de Condicion Medica -->
             <ion-item>
