--- a/src/app/private/pages/cambiar-password/cambiar-password.page.html
+++ b/src/app/private/pages/cambiar-password/cambiar-password.page.html
@@ -80,7 +80,7 @@
                         <ion-row>
 
                             <ion-col>
-                                <ion-button type="submit" expand="block" [disabled]="FormCambioPass.invalid || !FormCambioPass.get('confirmarpassword')?.value == FormCambioPass.get('passwordnueva')?.value ">Guardar</ion-button>
+                                <ion-button type="submit" expand="block" [disabled]="FormCambioPass.get('confirmarpassword')?.value !== FormCambioPass.get('passwordnueva')?.value  ||FormCambioPass.invalid ">Guardar</ion-button>
                             </ion-col>
                         </ion-row>
                     </form>
