--- a/src/app/private/pages/receta-crear/receta-crear.page.html
+++ b/src/app/private/pages/receta-crear/receta-crear.page.html
@@ -1,13 +1,63 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>recetaCrear</ion-title>
+    <ion-title>Creaer Receta</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">recetaCrear</ion-title>
-    </ion-toolbar>
-  </ion-header>
+      <!-- Animación -->
+      <div class="anim">
+        <ng-lottie [options]="options"></ng-lottie>
+      </div>
+
+    <ion-list>
+
+        <form [formGroup]="FormReceta" (ngSubmit)="CreateReceta(FormReceta.value)">
+            <ion-item>
+                <ion-icon name="book-outline"></ion-icon>
+                <!-- Input de nombre_medicamento -->
+                <ion-input formControlName="nombre_medicamento" class="inputs" label="Medicamento" labelPlacement="floating" placeholder="Aspirina"></ion-input>
+            </ion-item>
+
+
+            <!-- Input de cantidad -->
+
+            <ion-item>
+                <ion-icon name="happy-outline"></ion-icon>
+                <ion-input formControlName="cantidad" class="inputs" label="Cantidad" type="number" labelPlacement="floating" placeholder="Total: 4"></ion-input>
+            </ion-item>
+
+
+            <!-- Input de lapso de tiempo -->
+
+            <ion-item>
+                <ion-icon name="alarm-outline"></ion-icon>
+                <ion-input formControlName="lapso_tiempo" class="inputs" label="Lapso de Tiempo" labelPlacement="floating" type="time" placeholder="Cada 8 Horas"></ion-input>
+            </ion-item>
+
+
+            <!-- Input Cita -->
+            <ion-item>
+              <ion-select formControlName="cita_id" label="Cita" label-placement="floating" fill="solid">
+                <ion-select-option value="1">Cita 1</ion-select-option>
+                <ion-select-option value="2">Cita 2</ion-select-option>
+                <ion-select-option value="3">Cita 3</ion-select-option>
+              </ion-select>
+            </ion-item>
+
+
+            <ion-button color="medium" type="submit">
+                Registrar
+                <ion-icon class="ion-icon-create" slot="end" name="create"></ion-icon>
+            </ion-button>
+        </form>
+
+    </ion-list>
+
+    <!-- Para regresar atrás -->
+    <ion-fab [routerLink]="['/recetas']" slot="fixed" horizontal="end" vertical="bottom">
+        <ion-fab-button color="dark">
+            <ion-icon name="chevron-back"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
 </ion-content>
