--- a/src/app/private/pages/recetas/recetas.page.html
+++ b/src/app/private/pages/recetas/recetas.page.html
@@ -1,13 +1,38 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>recetas</ion-title>
+    <ion-title>Lista de Recetas</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">recetas</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-button type="button" [routerLink]="['/recetas-crear']" class="add">
+    <ion-icon slot="icon-only" name="add-outline"></ion-icon>
+</ion-button>
+
+<div [routerLink]="['/receta-detalle']">
+    <ion-img class="icon-img" src="../../../../assets/img/receta.png"></ion-img>
+    <ion-label class="label-cita" color="tertiary">Lozartán</ion-label>
+    <ion-badge class="label-estado label-estado-1" color="warning">Cantidad: 5</ion-badge>
+</div>
+
+<div>
+    <ion-img class="icon-img" src="../../../../assets/img/receta.png"></ion-img>
+    <ion-label class="label-cita" color="tertiary">Huevesilina</ion-label>
+    <ion-badge class="label-estado label-estado-2" color="warning">Cantidad: 0</ion-badge>
+</div>
+
+<div>
+    <ion-img class="icon-img" src="../../../../assets/img/receta.png"></ion-img>
+    <ion-label class="label-cita" color="tertiary">Chepasilina
+        <nav></nav>
+    </ion-label>
+    <ion-badge class="label-estado label-estado-3" color="warning">Cantidad: Infinita</ion-badge>
+</div>
+
+
+<div>
+    <ion-img class="icon-img" src="../../../../assets/img/receta.png"></ion-img>
+    <ion-label class="label-cita" color="tertiary">Viagra</ion-label>
+    <ion-badge class="label-estado label-estado-4" color="warning">Cantidad: 100</ion-badge>
+</div>
 </ion-content>
