--- a/src/app/private/pages/pagos/pagos.page.html
+++ b/src/app/private/pages/pagos/pagos.page.html
@@ -1,13 +1,69 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>pagos</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>Pagos</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">pagos</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+    <h1>Registro de Pagos</h1>
+
+    <ion-list [routerLink]="['/pagos-detalle']">
+        <ion-item>
+            <ion-card>
+                <ion-card-content>
+                    <div class="card-content">
+                        <ion-thumbnail class="avatar">
+                            <img src="../../../../assets/img/pagos.png" alt="Avatar">
+                        </ion-thumbnail>
+                        <div class="info">
+                            <h2>Cirugia</h2>
+                            <p>$ 100.00</p>
+                        </div>
+                    </div>
+                </ion-card-content>
+            </ion-card>
+        </ion-item>
+    </ion-list>
+
+
+    <ion-list [routerLink]="['/pagos-detalle']">
+        <ion-item>
+            <ion-card>
+                <ion-card-content>
+                    <div class="card-content">
+                        <ion-thumbnail class="avatar">
+                            <img src="../../../../assets/img/pagos.png" alt="Avatar">
+                        </ion-thumbnail>
+                        <div class="info">
+                            <h2>Asistencia Médica</h2>
+                            <p>$ 50.00</p>
+                        </div>
+                    </div>
+                </ion-card-content>
+            </ion-card>
+        </ion-item>
+    </ion-list>
+
+    <ion-list [routerLink]="['/pagos-detalle']">
+        <ion-item>
+            <ion-card>
+                <ion-card-content>
+                    <div class="card-content">
+                        <ion-thumbnail class="avatar">
+                            <img src="../../../../assets/img/pagos.png" alt="Avatar">
+                        </ion-thumbnail>
+                        <div class="info">
+                            <h2>Consulta</h2>
+                            <p>$ 12.00</p>
+                        </div>
+                    </div>
+                </ion-card-content>
+            </ion-card>
+        </ion-item>
+    </ion-list>
+
+
+
+
 </ion-content>
